--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
+    "prisma-generate": "npx prisma generate",
     "migrate": "npx prisma migrate dev",
+    "seed": "ts-node src/database/seed.ts",
     "studio": "npx prisma studio",
     "kill": "kill -9 $(lsof -ti:3000)",
     "dev": "npm run start:dev",
@@ -28,6 +30,7 @@
   "dependencies": {
     "@faker-js/faker": "^9.6.0",
     "@nestjs/common": "^11.0.1",
+    "@nestjs/config": "^4.0.1",
     "@nestjs/core": "^11.0.1",
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/platform-express": "^11.0.12",
