--- a/.env.local
+++ b/.env.local
@@ -9,3 +9,4 @@ DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}
 JWT_SECRET=
 CLIENT_ID=
 CLIENT_SECRET=
+CORS_ORIGINS=
